manifests/namespaces.yaml
# Namespace Definitions
apiVersion: v1
kind: Namespace
metadata:
  name: auth
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
---
apiVersion: v1
kind: Namespace
metadata:
  name: portainer
---
apiVersion: v1
kind: Namespace
metadata:
  name: pgadmin
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
