manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: database
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: auth
spec:
  selector:
    app: auth-api
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 81
    targetPort: 81
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backend
spec:
  selector:
    app: backend-api
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 82
    targetPort: 82
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: grafana
spec:
  selector:
    app: grafana
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: portainer-service
  namespace: portainer
spec:
  selector:
    app: portainer
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: pgadmin
spec:
  selector:
    app: pgadmin
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 5050
    targetPort: 80
